# Discord-AISelfBot

./: .gitignore  main.py  pyproject.toml
