[project]
name = "discord-aiselfbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "discord-py-self>=2.0.1",
    "gtts>=2.5.4",
    "ipython>=9.4.0",
    "openai>=1.98.0",
    "pyfiglet>=1.0.3",
    "qrcode>=8.2",
    "requests>=2.32.4",
]
